added csrf token field

--- a/pylistener/pylistener/templates/login.jinja2
+++ b/pylistener/pylistener/templates/login.jinja2
@@ -1,4 +1,11 @@
 {% extends 'layout.jinja2' %}
 {% block body %}
-
+    <form method="POST">
+      <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
+      <label for="username">Username: </label>
+      <input type="text" name="username" required>
+      <label for="password">Password: </label>
+      <input type="password" name="password" required>
+      <button type="submit">Log In</button>
+    </form>
 {% endblock %}
